# SICXE-Assembler

./: .gitignore  20161631.c  20161631.h  CMakeLists.txt  Document.doc  Document22.doc  Makefile  README  README.md  assemble.c  assemble.h  command.c  command.h  command_execute.c  command_execute.h  command_macro.h  command_mapping.c  command_mapping.h  command_objects.h  command_shell.c  command_shell.h  command_test.c  command_test.h  command_validate_util.c  command_validate_util.h  debug.c  debug.h  dir.c  dir.h  document.docx  history.c  history.h  main.c  memory.c  memory.h  opcode.c  opcode.h  opcode.txt  opcode_objects.c  opcode_objects.h  (+8 more)
